--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 /*
-* Fill Name: index.html v0.3.0
+* Fill Name: index.html v0.5.0
 * Update: 2020.04.18
 * Author: developern
 */
@@ -42,10 +42,22 @@ ul li a {
     background-color: rgb(104, 104, 175);
 }
 .article-bg2 {
-    height: 550px;
+    height: 650px;
     padding: 15px;
     text-align: center;
     background-color: rgb(14, 124, 0);
+}
+.article-bg3 {
+    height: 450px;
+    padding: 15px;
+    text-align: center;
+    background-color: rgb(121, 82, 0);
+}
+.article-bg4 {
+    height: 450px;
+    padding: 15px;
+    text-align: center;
+    background-color: rgb(99, 0, 230);
 }
 
 /* box model test */
