--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 /*
-* Fill Name: index.html v0.5.0
+* Fill Name: index.html v0.6.0
 * Update: 2020.04.18
 * Author: developern
 */
@@ -59,6 +59,12 @@ ul li a {
     text-align: center;
     background-color: rgb(99, 0, 230);
 }
+.article-bg5 {
+    height: 450px;
+    padding: 15px;
+    text-align: center;
+    background-color: rgb(0, 129, 230);
+}
 
 /* box model test */
 .box1 {
@@ -113,4 +119,29 @@ ul li a {
 }
 .b-radius4 {
     border-radius: 80%;
+}
+
+/* 테이블 연습 */
+thead,
+tfoot {
+    background-color: #3f87a6;
+    color: #fff;
+}
+tbody {
+    background-color: #e4f0f5;
+}
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(0, 0, 0);
+}
+td,
+th {
+    border: 1px solid rgb(0, 0, 0);
+    padding: 5px 10px;
+}
+td {
+    text-align: center;
+}
+caption {
+    caption-side: bottom;
 }
