--- a/main.css
+++ b/main.css
@@ -65,6 +65,12 @@ ul li a {
     text-align: center;
     background-color: rgb(0, 129, 230);
 }
+.article-bg6 {
+    height: 450px;
+    padding: 15px;
+    text-align: center;
+    background-color: rgb(60, 129, 150);
+}
 
 /* box model test */
 .box1 {
@@ -133,6 +139,9 @@ tbody {
 table {
     border-collapse: collapse;
     border: 2px solid rgb(0, 0, 0);
+    margin: auto;
+    width: 600px;
+    height: 300px;
 }
 td,
 th {
@@ -144,4 +153,17 @@ td {
 }
 caption {
     caption-side: bottom;
+}
+
+.ttb {
+    border-collapse: collapse;
+}
+.th1 {
+    background-color: #5019b6;
+}
+.tb1 {
+    background-color: rgb(163, 163, 163);
+}
+.tf1 {
+    background-color: #0015d4;
 }
